# shipnotes

./: README.md  index.html  pyproject.toml
pages/: index.html
src/changeloggen/: cli.py  core.py  render.py
tests/: test_core.py
