[project]
name = "changeloggen"
version = "0.1.0"
description = "Generate user-friendly changelogs from git history"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
changeloggen = "changeloggen.cli:main"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
