[project]
name = "shipnotes"
version = "0.1.0"
description = "Generate user-friendly changelogs from git history"
authors = [{ name = "shyh26", email = "shyh26@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["changelog", "git", "release-notes", "conventional-commits", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
shipnotes = "changeloggen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/changeloggen"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://shyh26.github.io/changeloggen"
Repository = "https://github.com/shyh26/changeloggen"
